# crawler

./: Cargo.toml  README.md  entities.ndjson  products.ndjson
site/: index.html  robots.txt  sitemap.xml
site/products/: index.html
site/products/001/: index.html
src/: main.rs
