[package]
name = "crawler"
version = "0.1.0"
authors = ["Oliver Paraskos <oparaskos@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider = "1.3.1"
scraper = "0.12"
serde = "1.0.136"
serde_json = "1.0"