[package]
name = "crawler"
version = "0.1.0"
authors = ["Oliver Paraskos <oparaskos@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
spider = "1.3.1"
scraper = "0.12"
serde = "~1"
serde_json = "~1"
url = {version = "2", features = ["serde"]}
regex = "1"